--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@material-ui/lab": "^4.0.0-alpha.46",
     "bootstrap": "^4.4.1",
     "material-ui-icons": "^1.0.0-beta.36",
+    "mdbreact": "^4.25.4",
     "react": "^16.13.0",
     "react-bootstrap": "^0.32.4",
+    "react-data-table-component": "^6.3.1",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {},
   "scripts": {
