--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-bootstrap": "^0.32.4",
     "react-data-table-component": "^6.3.1",
     "react-dom": "^16.13.0",
+    "react-file-viewer": "^1.2.1",
+    "react-multivalue-text-input": "^0.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "0.9.5",
+    "react-scroll-parallax": "^2.3.3",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {},
