--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rashmiraghu1998.github.io/learning-platform-frontend/" ,
+  "homepage": "https://rashmiraghu1998.github.io/learning-platform-frontend/",
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
@@ -31,6 +31,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b client -d build"
+    "deploy": "gh-pages -d build"
   }
 }
