--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rashmiraghu1998.github.io/learning-platform-frontend/" ,
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
@@ -22,15 +21,11 @@
     "react-scroll-parallax": "^2.3.3",
     "styled-components": "^5.0.1"
   },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b client -d build"
+    "predeploy": "npm run build"
   }
 }
